<?xml version="1.0"?>
<package format="2">
  <name>indy</name>
  <version>1.0.3</version>
  <description>ROS-Industrial support for Indy manipulators (metapackage).</description>
  <author>Thach Do</author>
  <maintainer email="thach.do@neuromeka.com">Thach Do</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://wiki.neuromeka.net/index.php?title=ROS_Indy</url>
  <url type="repository">https://github.com/neuromeka-robotics/ros_indy</url>
  <url type="bugtracker">https://github.com/neuromeka-robotics/ros_indyissues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>indy_driver</exec_depend>
  <exec_depend>indy5_description</exec_depend>
  <exec_depend>indy5_moveit_config</exec_depend>
  <exec_depend>indy7_description</exec_depend>
  <exec_depend>indy7_moveit_config</exec_depend>
  <exec_depend>indyrp_description</exec_depend>
  <exec_depend>indyrp_moveit_config</exec_depend>
  <exec_depend>indyrp2_description</exec_depend>
  <exec_depend>indyrp2_moveit_config</exec_depend>
  
  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
