<?xml version="1.0"?>
<package>
  <name>indy7_control</name>
  <version>0.0.0</version>
  <description>The indy7_control package</description>

  <maintainer email="gwanwoo.kim@neuromeka.com">Gwanwoo Kim</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.neuromeka.net/index.php?title=ROS_Indy</url>
  <url type="repository">https://github.com/neuromeka-robotics/ros_indy</url>
  <url type="bugtracker">https://github.com/neuromeka-robotics/ros_indyissues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>

  <export>
  </export>

</package>
