<?xml version="1.0"?>
<package format="2">
  <name>indy_driver</name>
  <version>1.0.3</version>
  <description>The indy_driver package</description>
  <author>Thach Do</author>
  <maintainer email="thach.do@neuromeka.com">Thach Do</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://wiki.neuromeka.net/index.php?title=ROS_Indy</url>
  <url type="repository">https://github.com/neuromeka-robotics/ros_indy</url>
  <url type="bugtracker">https://github.com/neuromeka-robotics/ros_indyissues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>industrial_robot_client</depend>

</package>
