<?xml version="1.0"?>
<package format="2">
  <name>indy_driver_py</name>
  <version>1.0.3</version>
  <description>The indy_driver_py package</description>
  <author>Gwanwoo Kim</author>
  <maintainer email="gwanwoo.kim@neuromeka.com">Gwanwoo Kim</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://wiki.neuromeka.net/index.php?title=ROS_Indy</url>
  <url type="repository">https://github.com/neuromeka-robotics/ros_indy</url>
  <url type="bugtracker">https://github.com/neuromeka-robotics/ros_indyissues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  
</package>
